--- a/mvc-final/mvc-final/Views/Home/Index.cshtml
+++ b/mvc-final/mvc-final/Views/Home/Index.cshtml
@@ -1,34 +1,111 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "首頁";
 }
 
 <main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
-
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                今年iPhone 15和iPhone 15 Pro的充電情況已經改變了。Apple 專有的 Lightning 連接埠已被 USB-C 取代，因此現在可以使用幾乎任何可以在網路上或販售通路上找到的USB-C 線和USB-C 電源充電器為手機充電。但你到底需要什麼才能確保你的 iPhone使用快充充電呢？
-                <br />
-                由於 USB-C 是開放標準，因此你幾乎可以使用任何能找到的 USB-C 連接線。iPhone 15 的包裝盒中附帶了一條精美的編織線，你也可以使用任何能找到的 USB-C 線，包括那些以「Android」電話使用的線材。但是，如果你的 iPhone 充電速度很慢，你可能需要更換電源轉接器。
-
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
+    <!--carousel-->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner bg-dark">
+            <div class="carousel-item active">
+                <img src="~/Images/S08/3C_3/p00.png" class="d-block w-50 mx-auto" alt="...">
+                <div class="carousel-caption d-none d-md-block text-bg-light box">
+                    @Html.ActionLink("Wi-Fi 6E 和你的 Apple 設備", "A03", "S08", new { area = "" }, new { @class = "ll" })
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="~/Images/S08/3C_2/p00.jpg" class="d-block w-50 mx-auto" alt="...">
+                <div class="carousel-caption d-none d-md-block text-bg-light box">
+                    @Html.ActionLink("iPhone 15 充電慢？如何使用 USB-C 為 iPhone 快速充電", "A02", "S08", new { area = "" }, new { @class = "ll" })
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="~/Images/S08/3C_1/p00.jpg" class="d-block w-50 mx-auto" alt="...">
+                <div class="carousel-caption d-none d-md-block text-bg-light box">
+                    @Html.ActionLink("Humane正式發表全球首款個人AI裝置Ai Pin，會是下一代智慧手機？", "A01", "S08", new { area = "" }, new { @class = "ll" })
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
+    <!--table-->
+    <table class="table table-bordered" style="margin-top:50px;">
+        <tr>
+            <th scope="row" class="table-active col-md-6 text-center text-bg-dark thth" colspan="2">最新文章</th>
+            <th class="table-active col-md-6 text-center text-bg-dark thth" colspan="2">猜你想看</th>
+        </tr>
+        <tr>
+            <td scope="row" class="col-md-2">
+                <img src="~/Images/S08/3C_3/p00.png" class="ii" />
+            </td>
+            <th class="col-md-4">
+                @Html.ActionLink("Wi-Fi 6E 和你的 Apple 設備", "A03", "S08", new { area = "" }, new { @class = "ll" })
+            </th>
+            <td scope="row" class="col-md-2">
+                <img src="~/Images/S08/3C_3/p00.png" class="ii" />
+            </td>
+            <th class="col-md-4">
+                @Html.ActionLink("Wi-Fi 6E 和你的 Apple 設備", "A03", "S08", new { area = "" }, new { @class = "ll" })
+            </th>
+        </tr>
+        <tr>
+            <td scope="row">
+                <img src="~/Images/S08/3C_2/p00.jpg" class="ii" />
+            </td>
+            <th>
+                @Html.ActionLink("iPhone 15 充電慢？如何使用 USB-C 為 iPhone 快速充電", "A02", "S08", new { area = "" }, new { @class = "ll" })
+            </th>
+            <td scope="row">
+                <img src="~/Images/S08/3C_2/p00.jpg" class="ii" />
+            </td>
+            <th>
+                @Html.ActionLink("iPhone 15 充電慢？如何使用 USB-C 為 iPhone 快速充電", "A02", "S08", new { area = "" }, new { @class = "ll" })
+            </th>
+        </tr>
+        <tr>
+            <td scope="row">
+                <img src="~/Images/S08/3C_1/p00.jpg" class="ii" />
+            </td>
+            <th>
+                @Html.ActionLink("Humane正式發表全球首款個人AI裝置Ai Pin，會是下一代智慧手機？", "A01", "S08", new { area = "" }, new { @class = "ll" })
+            </th>
+            <td scope="row">
+                <img src="~/Images/S08/3C_1/p00.jpg" class="ii" />
+            </td>
+            <th>
+                @Html.ActionLink("Humane正式發表全球首款個人AI裝置Ai Pin，會是下一代智慧手機？", "A01", "S08", new { area = "" }, new { @class = "ll" })
+            </th>
+        </tr>
+    </table>
 </main>
+<style>
+    .box{
+        border:#a0a0a0 3px solid;
+    }
+    .thth{
+        font-size:x-large;
+    }
+    .ll:hover {
+        background-color: #cbcbcb;
+    }
+
+    .ll {
+        color: black;
+        text-decoration: none;
+        font-size: x-large;
+    }
+    .ii{
+        width: 250px;
+    }
+</style>
